k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vulkan-renderer-service
spec:
  selector:
    app: vulkan-renderer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
